--- a/vignettes/index.html
+++ b/vignettes/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 <meta http-equiv="x-ua-compatible" content="IE=9" >
 
-<title>A vignette for <em>datacheck</em> package (version 1.2.1)</title>
+<title>A vignette for <em>datacheck</em> (version 1.2.1)</title>
 
 <style type="text/css">
 body, td {
@@ -181,7 +181,7 @@ hljs.initHighlightingOnLoad();
 <body>
 <!-- rmarkdown v1 -->
 
-<h1>A vignette for <em>datacheck</em> package (version 1.2.1)</h1>
+<h1>A vignette for <em>datacheck</em> (version 1.2.1)</h1>
 
 <p>Reinhard Simon, International Potato Center, Lima, Peru</p>
 
@@ -245,7 +245,7 @@ profil = datadict_profile(atable, srules)
 
 <!-- html table generated in R 3.1.3 by xtable 1.7-4 package -->
 
-<!-- Thu Apr 16 21:02:08 2015 -->
+<!-- Fri Apr 17 09:49:08 2015 -->
 
 <table border=1>
 <tr> <th>  </th> <th> ID </th> <th> Latitude </th> <th> Longitude </th> <th> Country </th> <th> Adm1 </th> <th> Adm2 </th>  </tr>
@@ -281,7 +281,7 @@ xtable(ps[recs, cols])
 
 <!-- html table generated in R 3.1.3 by xtable 1.7-4 package -->
 
-<!-- Thu Apr 16 21:02:08 2015 -->
+<!-- Fri Apr 17 09:49:08 2015 -->
 
 <table border=1>
 <tr> <th>  </th> <th> ID </th> <th> Latitude </th> <th> Longitude </th> <th> Country </th> <th> Record.score </th>  </tr>
@@ -321,7 +321,7 @@ summaries of the data. A custom summary function is included in the package to d
 
 <!-- html table generated in R 3.1.3 by xtable 1.7-4 package -->
 
-<!-- Thu Apr 16 21:02:09 2015 -->
+<!-- Fri Apr 17 09:49:10 2015 -->
 
 <table border=1>
 <tr> <th>  </th> <th> n </th> <th> missing </th> <th> unique </th> <th> value </th> <th> min </th> <th> max </th> <th> Mean </th> <th> sd </th> <th> .05 </th> <th> .10 </th> <th> .25 </th> <th> .50 </th> <th> .75 </th> <th> .90 </th> <th> .95 </th>  </tr>
@@ -351,7 +351,7 @@ summaries of the data. A custom summary function is included in the package to d
 
 <!-- html table generated in R 3.1.3 by xtable 1.7-4 package -->
 
-<!-- Thu Apr 16 21:02:09 2015 -->
+<!-- Fri Apr 17 09:49:10 2015 -->
 
 <table border=1>
 <tr> <th>  </th> <th> Variable </th> <th> Type </th> <th> Rule </th> <th> Comment </th> <th> Execution </th> <th> Error.sum </th> <th> Error.list </th>  </tr>
@@ -402,7 +402,7 @@ profil = datadict_profile(atable, srule1)
 
 <!-- html table generated in R 3.1.3 by xtable 1.7-4 package -->
 
-<!-- Thu Apr 16 21:02:09 2015 -->
+<!-- Fri Apr 17 09:49:10 2015 -->
 
 <table border=1>
 <tr> <th>  </th> <th> Variable </th> <th> Type </th> <th> Rule </th> <th> Comment </th> <th> Execution </th> <th> Error.sum </th> <th> Error.list </th>  </tr>
@@ -458,7 +458,7 @@ profil = datadict_profile(atable, srule1)
 
 <!-- html table generated in R 3.1.3 by xtable 1.7-4 package -->
 
-<!-- Thu Apr 16 21:02:09 2015 -->
+<!-- Fri Apr 17 09:49:10 2015 -->
 
 <table border=1>
 <tr> <th>  </th> <th> Variable </th> <th> Type </th> <th> Rule </th> <th> Comment </th> <th> Execution </th> <th> Error.sum </th> <th> Error.list </th>  </tr>
